fix(layout): Spacing updated according to new padding of main

--- a/src/@core/preset/preset/classes.scss
+++ b/src/@core/preset/preset/classes.scss
@@ -31,7 +31,7 @@
     &[style='padding: 64px 0px 48px;'],
     &[style='padding: 56px 0px 48px;'] {
       .max-h-content-container {
-        height: calc(100vh - 64px - 48px - (1.72rem * 2));
+        height: calc(100vh - 64px - 48px - (1.5rem * 2));
       }
     }
     // If AppBar is present and Footer is not present
@@ -39,21 +39,21 @@
     &[style='padding: 64px 0px 0px;'],
     &[style='padding: 56px 0px 0px;'] {
       .max-h-content-container {
-        height: calc(100vh - 64px - (1.72rem * 2));
+        height: calc(100vh - 64px - (1.5rem * 2));
       }
     }
     // If AppBar is not present and Footer is present
     &[style='padding: 0px 0px 48px 260px;'],
     &[style='padding: 0px 0px 48px;'] {
       .max-h-content-container {
-        height: calc(100vh - 48px - (1.72rem * 2));
+        height: calc(100vh - 48px - (1.5rem * 2));
       }
     }
     // If AppBar & footer both are not present
     &[style='padding: 0px 0px 0px 260px;'],
     &[style='padding: 0px;'] {
       .max-h-content-container {
-        height: calc(100vh - (1.72rem * 2));
+        height: calc(100vh - (1.5rem * 2));
       }
     }
   }
@@ -65,13 +65,13 @@
     // If AppBar+SystemBar & Footer are present
     &[style='padding: 132px 0px 48px;'] {
       .max-h-content-container {
-        height: calc(100vh - 132px - 48px - (1.72rem * 2));
+        height: calc(100vh - 132px - 48px - (1.5rem * 2));
       }
     }
     // If AppBar+SystemBar are present & Footer is not present
     &[style='padding: 132px 0px 0px;'] {
       .max-h-content-container {
-        height: calc(100vh - 132px - (1.72rem * 2));
+        height: calc(100vh - 132px - (1.5rem * 2));
       }
     }
   }
